<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/chatIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/createChat"
        android:contentDescription="@string/chat_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_fields_style"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chatIcon"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chatTitleInput"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/chat_name"
            android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/chatBackground"
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_below="@id/chatTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/chat_background"/>

    <Button
        android:id="@+id/createChat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:textColor="@color/white"
        android:text="@string/create_chat" />
</RelativeLayout>