<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AuthTypeSelectFragment"
    android:orientation="vertical">

    <Button
        android:id="@+id/loginToAccountButton"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/enter_text"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toTopOf="@+id/createNewAccountButton"
        app:layout_constraintEnd_toEndOf="@+id/createNewAccountButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createNewAccountButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/therace"
        android:text="@string/app_name"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createNewAccountButton"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/create_account_text"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleAuthButton"
        android:layout_width="209dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewAccountButton" />

</androidx.constraintlayout.widget.ConstraintLayout>