<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLoginInputLayout"
        android:layout_width="310dp"
        android:layout_height="58dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/deepIdLoginInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/deepIdLoginInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/deepIdLoginInputLayout"
        app:layout_constraintVertical_bias="0.107">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_fields_style"
            android:hint="@string/passwordHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deepIdLoginInputLayout"
        android:layout_width="310dp"
        android:layout_height="58dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginDeepIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_fields_style"
            android:hint="@string/deepIdHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginSubmitButton"
        android:layout_width="307dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/enter_text"
        android:textColor="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginInputLayout"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/passwordLoginInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginInputLayout"
        app:layout_constraintVertical_bias="0.104" />

</androidx.constraintlayout.widget.ConstraintLayout>